2007-08-13  Marcus Brinkmann  <marcus@g10code.de>

	* README.en.txt: New section documenting installer options.
	* README.de.txt: Likewise.

2007-07-20  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-de.htm4: Fix some changes that didn't make
	it into the german translation.

2007-07-13  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/versions.m4: Rename Sylpheed-Claws to Claws Mail. Add
	forgotten "2" to GnuPG for German pages.

2007-07-12  Werner Koch  <wk@g10code.com>

	* website/download.htm4: Add Irish mirror.
	* website/download-de.htm4: Ditto.
	* website/versions.m4: Ditto.

2007-07-10  Werner Koch  <wk@g10code.com>

	* website/buildhtml.mk (USER): Take only the first entry.

	* website/download-de.htm4: Document that the light installer
	comes without gnupg2.
	* website/download.htm4: Ditto.

2007-07-05  Marcus Brinkmann  <marcus@g10code.de>

	* website/index-de.htm4, website/index.htm4,
	website/template_header.m4, website/reporting-bugs-de.htm4
	website/reporting-bugs.htm4, pkg-copyright.txt,
	manual/what-is-gpg4win.tex, manual/durchblicker.tex,
	manual/was-ist-gpg4win.tex: Rename Sylpheed Claws to Claws Mail.

2007-07-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-de.htm4, website/build-installer.htm4:
	Further fixes (size, dependencies)

2007-07-03  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/index.htm4: Removed some hints on "german only".

2007-07-03  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/website-maintenance-de.htm4, website/website-maintenance.htm4:
	Fixed description to consider that the whole package needs to be
	retrieved (because a global configure is needed to have the website work
	properly).

	* website/build-installer-de.htm4, website/build-installer.htm4:
	Updated description from Sage to Etch and increased the required
	MegaBytes of download and harddisk.
