@@ -28,10 +28,11 @@ H2 {
 }
 
 H3 {
-    margin-bottom: 0px;
-    font-size: 110%;
-    font-weight: normal;
-    color: #fa050c;
+    background-color: #ffff98;
+    border-bottom: 2px solid #fdba19;
+    margin-top: 0px;
+    font-size: 125%;
+    font-weight: bold;
 }
 
 STRONG {
